ontouchstart added to work on ipad/iphone

--- a/KidsAtHomeV3.html
+++ b/KidsAtHomeV3.html
@@ -17,7 +17,7 @@
     </div>
     
     <div class="content">
-        <a id="mainLink" href="KidsAtHomeNavPage.html">Activity ideas for kids</a>
+        <a id="mainLink" href="KidsAtHomeNavPage.html" ontouchstart="">Activity ideas for kids</a>
     </div>
     
     <div class="footer">
