Added files via upload

--- a/KidsAtHomeBaking.html
+++ b/KidsAtHomeBaking.html
@@ -38,8 +38,8 @@
       <a class="aContentPagesNav" href="KidsAtHomeV3.html">Kids@Home</a>
       <ul>
         <li class="dropdown">
-          <!--<a href="#" class="aContentPagesNav"><i class="material-icons">menu</i></a>-->
-          <i class="material-icons">menu</i>
+          <a href="#" class="aContentPagesNav"><i class="material-icons">menu</i></a>
+          <!--<i class="material-icons">menu</i>-->
           <div class="dropdown-content">
             <a href="KidsAtHomeV3.html">Home</a>
             <a href="KidsAtHomePaper.html">Paper</a>
