--- a/KidsAtHomeBaking.html
+++ b/KidsAtHomeBaking.html
@@ -36,7 +36,24 @@
       <!-- Start with the title and navigation-->
       <!--<a class="aPgTitleContentPages" href="KidsAtHomeV3.html">Kids@Home</a>-->
       <a class="aContentPagesNav" href="KidsAtHomeV3.html">Kids@Home</a>
-      <ul>
+      <div class="overlay-menu">
+        <ul>
+          <li class="dropdown">
+            <input type="checkbox" id="menu" name="menu" class="menu-checkbox">
+            <label id="toggle-nav-label" for="menu"><i class="material-icons">menu</i></label>
+            <div class="dropdown-content">
+              <a href="KidsAtHomeV3.html">Home</a>
+              <a href="KidsAtHomePaper.html">Paper</a>
+              <a href="KidsAtHomeBaking.html">Baking</a>
+              <a href="KidsAtHomeModels.html">Models</a>
+              <a href="KidsAtHomeGames.html">Games</a>
+              <a href="KidsAtHomeExperiments.html">Experiments</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+      
+      <!--<ul>
         <li class="dropdown">
           <a href="#" class="menuIcon"><i class="material-icons">menu</i></a>
           <input type="checkbox" id="menu" name="menu" class="menu-checkbox">
@@ -51,7 +68,7 @@
         </li>
       </ul>
       
-      <!--<input type="checkbox" id="menu" name="menu" class="menu-checkbox">
+      <input type="checkbox" id="menu" name="menu" class="menu-checkbox">
       <div class="menuTest">
           <a href="KidsAtHomeV3.html">Home</a>
           <a href="KidsAtHomePaper.html">Paper</a>
