Added files via upload
css only overlay menu

--- a/KidsAtHomeBaking.html
+++ b/KidsAtHomeBaking.html
@@ -37,20 +37,20 @@
       <!--<a class="aPgTitleContentPages" href="KidsAtHomeV3.html">Kids@Home</a>-->
       <a class="aContentPagesNav" href="KidsAtHomeV3.html">Kids@Home</a>
       <div class="overlay-menu">
-        <ul>
-          <li class="dropdown">
-            <input type="checkbox" id="menu" name="menu" class="menu-checkbox">
-            <label id="toggle-nav-label" for="menu"><i class="material-icons">menu</i></label>
-            <div class="dropdown-content">
+        <input type="checkbox" id="menu" name="menu" class="menu-checkbox">
+        <label id="toggle-nav-label" for="menu"><i class="material-icons">menu</i></label>
+        <div class="box">
+          <ul>
+            <li class="dropdown">
               <a href="KidsAtHomeV3.html">Home</a>
               <a href="KidsAtHomePaper.html">Paper</a>
               <a href="KidsAtHomeBaking.html">Baking</a>
               <a href="KidsAtHomeModels.html">Models</a>
               <a href="KidsAtHomeGames.html">Games</a>
               <a href="KidsAtHomeExperiments.html">Experiments</a>
-            </div>
-          </li>
-        </ul>
+            </li>
+          </ul>
+        </div>
       </div>
       
       <!--<ul>
