--- a/KidsAtHomeBakingFairyCakes.html
+++ b/KidsAtHomeBakingFairyCakes.html
@@ -65,7 +65,7 @@
     <div class="dContent">
       <div class="dContentTextCentre">
         <p class="pContentText">Making some fairy cakes<br />
-          Ingredients: 100g caster sugar, 100g butter, 100g self raising flour, 2 eggs, 1 teaspoon baking powder</p> 
+          Ingredients: 100g caster sugar, 100g butter, 100g self raising flour, 2 eggs, 1 teaspoon baking powder, pre-heated oven at 170 deg C</p> 
       </div>
       <div class="dContentTextCentre">
         <p class="pContentText">Let your children help to make some fairy cakes - and then help eat them of course!</p> 
@@ -92,7 +92,7 @@
         <a href="images/image-3.jpg" data-lightbox="test" data-title="Add eggs and flour">
           <img src="images/image-3.jpg" alt="Add eggs and flour" style="width:100%">
         </a>
-        <p class="pContentText">Break 1 egg into the mixing bowl and sift in about 2 tablespoons of flour with a sieve.  Mix together well.
+        <p class="pContentText">Break 1 egg into the mixing bowl and sift in about 2 tablespoons of flour (from your 100g of flour) with a sieve.  Mix together well.
         If you can, let the kids break the egg in and sift in the flour.  Then let them give it a good mix (again you can finish off yourself).
         Repeat for the second egg and 2 more tablespoons of flour.</p>
       </div>
