--- a/KidsAtHomePaper.html
+++ b/KidsAtHomePaper.html
@@ -69,8 +69,8 @@
       </div>
   
       <div class="polaroidLeft">
-        <a href="images/image-2.jpg" data-lightbox="test" data-title="Racetrack">
-          <img src="images/image-2.jpg" alt="Racetrack" style="width:100%">
+        <a href="images/racetrack1.jpg" data-lightbox="test" data-title="Racetrack">
+          <img src="images/racetrack1.jpg" alt="Racetrack" style="width:100%">
         </a>
         <a class="aContentLink" href="KidsAtHomePaperRacetrack.html" ontouchstart="">Racetrack</a>
       </div>
@@ -97,8 +97,8 @@
       </div>
       
       <div class="polaroidRight">
-        <a href="images/image-1.jpg" data-lightbox="test" data-title="Fortune Teller">
-          <img src="images/image-1.jpg" alt="Fortune Teller" style="width:100%">
+        <a href="images/telleruse1.jpg" data-lightbox="test" data-title="Fortune Teller">
+          <img src="images/telleruse1.jpg" alt="Fortune Teller" style="width:100%">
         </a>
         <a class="aContentLink" href="KidsAtHomePaperFortuneTeller.html" ontouchstart="">Fortune Teller</a>
       </div>
