--- a/KidsAtHomePaperRacetrack.html
+++ b/KidsAtHomePaperRacetrack.html
@@ -70,36 +70,36 @@
     </div>
     <div class="dContentPics">
       <div class="polaroidLeft">
-        <a href="images/image-1.jpg" data-lightbox="test" data-title="Layout Paper">
-          <img src="images/image-1.jpg" alt="Layout Paper" style="width:100%">
+        <a href="images/racetracklayout.jpg" data-lightbox="test" data-title="Layout Paper">
+          <img src="images/racetracklayout.jpg" alt="Layout Paper" style="width:100%">
         </a>
         <p class="pContentText">Lay 6 pieces of paper in a rectangle with the edges touching</p>
       </div>
 
       <div class="polaroidRight">
-        <a href="images/image-2.jpg" data-lightbox="test" data-title="Stick together">
-          <img src="images/image-2.jpg" alt="Stick" style="width:100%">
+        <a href="images/racetrackstick.jpg" data-lightbox="test" data-title="Stick together">
+          <img src="images/racetrackstick.jpg" alt="Stick" style="width:100%">
         </a>
         <p class="pContentText">Stick the paper together along the edges using sticky tape</p>
       </div>
 
       <div class="polaroidCentre">
-        <a href="images/image-3.jpg" data-lightbox="test" data-title="Draw racetrack">
-          <img src="images/image-3.jpg" alt="Draw racetrack" style="width:100%">
+        <a href="images/racetrackdraw.jpg" data-lightbox="test" data-title="Draw racetrack">
+          <img src="images/racetrackdraw.jpg" alt="Draw racetrack" style="width:100%">
         </a>
         <p class="pContentText">Turn over the large rectangle and get the kids to draw 2 parallel lines in a big loop on the paper</p>
       </div>
     
       <div class="polaroidRight">
-        <a href="images/image-3.jpg" data-lightbox="test" data-title="Decorate racetrack">
-          <img src="images/image-3.jpg" alt="Decorate racetrack" style="width:100%">
+        <a href="images/racetrackdecorate.jpg" data-lightbox="test" data-title="Decorate racetrack">
+          <img src="images/racetrackdecorate.jpg" alt="Decorate racetrack" style="width:100%">
         </a>
         <p class="pContentText">Get the kids to decorate the racetrack - colour the track with crayons? Add trees or spectators to the edges?</p>
       </div>
       
       <div class="polaroidCentre">
-        <a href="images/image-2.jpg" data-lightbox="test" data-title="Play!">
-          <img src="images/image-2.jpg" alt="Play!" style="width:100%">
+        <a href="images/racetrack2.jpg" data-lightbox="test" data-title="Play!">
+          <img src="images/racetrack2.jpg" alt="Play!" style="width:100%">
         </a>
         <p class="pContentText">Time to play! Let the kids zoom their cars around the racetrack - you could even time them with your phone and see who wins!</p>
       </div>
