Added more content

--- a/KidsAtHomeGames.html
+++ b/KidsAtHomeGames.html
@@ -65,7 +65,7 @@
         <a href="images/image-1.jpg" data-lightbox="test" data-title="Sardines">
           <img src="images/image-1.jpg" alt="Sardines" style="width:100%">
         </a>
-        <a class="aContentLink" href="KidsAtHomePaperTreasureHunt.html" ontouchstart="">Sardines</a>
+        <a class="aContentLink" href="KidsAtHomeGamesSardines.html" ontouchstart="">Sardines</a>
       </div>
   
       <div class="polaroidLeft">
