--- a/KidsAtHomeBaking.html
+++ b/KidsAtHomeBaking.html
@@ -90,8 +90,8 @@
       </div>
     
       <div class="polaroidCentre">
-        <a href="images/fairycakescooked.jpg" data-lightbox="test" data-title="Fairy Cakes">
-          <img src="images/fairycakescooked.jpg" alt="Fairy Cakes" style="width:100%">
+        <a href="images/cakesdecorate3.jpg" data-lightbox="test" data-title="Fairy Cakes">
+          <img src="images/cakesdecorate3.jpg" alt="Fairy Cakes" style="width:100%">
         </a>
         <a class="aContentLink" href="KidsAtHomeBakingFairyCakes.html" ontouchstart="">Fairy Cakes</a>
       </div>
