--- a/KidsAtHomeExperimentsMagnifying.html
+++ b/KidsAtHomeExperimentsMagnifying.html
@@ -69,36 +69,36 @@
       </div>
       <div class="dContentTextCentre">
         <p class="pContentText">For this experiment you're going to get the kids to collect some samples of various different
-        household/garden items to look at with a magnifying glass or microscope.  The idea is to stick them down on paper so they
+        household/garden items to look at with a magnifying glass or pocket microscope.  The idea is to stick them down on paper so they
         don't move as the kids are trying to look at them.</p> 
       </div>
     </div>
     <div class="dContentPics">
       <div class="polaroidLeft">
-        <a href="images/image-1.jpg" data-lightbox="test" data-title="Get samples">
-          <img src="images/image-1.jpg" alt="Get samples" style="width:100%">
+        <a href="images/magnifystick2.jpg" data-lightbox="test" data-title="Get samples">
+          <img src="images/magnifystick2.jpg" alt="Get samples" style="width:100%">
         </a>
-        <p class="pContentText">Get the kids to place a small amount (1/4 tsp or less) of granulated sugar or sand
-        or both on a sheet of white paper and cover it with sticky tape</p>
+        <p class="pContentText">Get the kids to place a small amount (1/4 tsp or less) of granulated sugar, sand, petals, grass
+        on a sheet of white paper and cover it with sticky tape</p>
       </div>
 
       <div class="polaroidRight">
-        <a href="images/image-2.jpg" data-lightbox="test" data-title="Observe">
-          <img src="images/image-2.jpg" alt="Observe" style="width:100%">
+        <a href="images/magnifyobserve.jpg" data-lightbox="test" data-title="Observe">
+          <img src="images/magnifyobserve.jpg" alt="Observe" style="width:100%">
         </a>
-        <p class="pContentText">Have a look at the shapes of the sand/sugar with the magnifying glass or microscope</p>
+        <p class="pContentText">Have a look at the shapes of the sand/sugar and other items with the magnifying glass or microscope</p>
       </div>
 
       <div class="polaroidCentre">
-        <a href="images/image-3.jpg" data-lightbox="test" data-title="Label">
-          <img src="images/image-3.jpg" alt="Label" style="width:100%">
+        <a href="images/magnifylabel.jpg" data-lightbox="test" data-title="Label">
+          <img src="images/magnifylabel.jpg" alt="Label" style="width:100%">
         </a>
         <p class="pContentText">Allow the kids to label the specimen by writing underneath the sticky tape</p>
       </div>
     
       <div class="polaroidLeft">
-        <a href="images/image-3.jpg" data-lightbox="test" data-title="Add more specimens">
-          <img src="images/image-3.jpg" alt="Add more specimens" style="width:100%">
+        <a href="images/magnifystick1.jpg" data-lightbox="test" data-title="Add more specimens">
+          <img src="images/magnifystick1.jpg" alt="Add more specimens" style="width:100%">
         </a>
         <p class="pContentText">Let the kids run off to collect more samples to stick down, observe and label</p>
       </div>
