--- a/KidsAtHomeGames.html
+++ b/KidsAtHomeGames.html
@@ -72,7 +72,7 @@
         <a href="images/image-2.jpg" data-lightbox="test" data-title="Stuck in the Mud">
           <img src="images/image-2.jpg" alt="Stuck in the Mud" style="width:100%">
         </a>
-        <a class="aContentLink" href="KidsAtHomePaperRacetrack.html" ontouchstart="">Stuck in the Mud</a>
+        <a class="aContentLink" href="KidsAtHomeGamesStuckInTheMud.html" ontouchstart="">Stuck in the Mud</a>
       </div>
       
       <div class="polaroidCentre">
@@ -83,8 +83,8 @@
       </div>
       
       <div class="polaroidRight">
-        <a href="images/image-1.jpg" data-lightbox="test" data-title="Perfumes and Potions">
-          <img src="images/image-1.jpg" alt="Perfumes and Potions" style="width:100%">
+        <a href="images/potionsinside.jpg" data-lightbox="test" data-title="Perfumes and Potions">
+          <img src="images/potionsinside.jpg" alt="Perfumes and Potions" style="width:100%">
         </a>
         <a class="aContentLink" href="KidsAtHomeGamesPerfumesAndPotions.html" ontouchstart="">Perfumes and Potions</a>
       </div>
