--- a/KidsAtHomeGamesPerfumesAndPotions.html
+++ b/KidsAtHomeGamesPerfumesAndPotions.html
@@ -75,38 +75,38 @@
     </div>
     <div class="dContentPics">
       <div class="polaroidLeft">
-        <a href="images/adventure1.jpg" data-lightbox="test" data-title="Get a cup and spoon">
-          <img src="images/adventure1.jpg" alt="Get a cup and spoon" style="width:100%">
+        <a href="images/potionsequip.jpg" data-lightbox="test" data-title="Get a cup and spoon">
+          <img src="images/potionsequip.jpg" alt="Get a cup and spoon" style="width:100%">
         </a>
         <p class="pContentText">Give the kids a cup and spoon with about 2 -3cm of water in it</p>
       </div>
 
       <div class="polaroidRight">
-        <a href="images/image-2.jpg" data-lightbox="test" data-title="Add ingredients - outside">
-          <img src="images/image-2.jpg" alt="Add ingredients - outside" style="width:100%">
+        <a href="images/potionsadd.jpg" data-lightbox="test" data-title="Add ingredients - outside">
+          <img src="images/potionsadd.jpg" alt="Add ingredients - outside" style="width:100%">
         </a>
         <p class="pContentText">If you're outside let the kids pick some petals, leaves, grass, herbs anything they like to mix into
         a delightful perfume or a disgusting potion</p>
       </div>
 
       <div class="polaroidCentre">
-        <a href="images/image-3.jpg" data-lightbox="test" data-title="Add ingredients- inside">
-          <img src="images/image-3.jpg" alt="Add ingredients - inside" style="width:100%">
+        <a href="images/potionsinside.jpg" data-lightbox="test" data-title="Add ingredients- inside">
+          <img src="images/potionsinside.jpg" alt="Add ingredients - inside" style="width:100%">
         </a>
         <p class="pContentText">If you are inside give the kids a few drops of liquids or half a teaspoon of solids such as salt, sugar,
         tomato ketchup, vinegar, milk, juice depending on whether they want a sweet-smelling perfume or an obnoxious potion</p>
       </div>
     
-      <div class="polaroidRight">
-        <a href="images/image-3.jpg" data-lightbox="test" data-title="Mix">
-          <img src="images/image-3.jpg" alt="Mix" style="width:100%">
+      <div class="polaroidLeft">
+        <a href="images/potionsmix.jpg" data-lightbox="test" data-title="Mix">
+          <img src="images/potionsmix.jpg" alt="Mix" style="width:100%">
         </a>
         <p class="pContentText">Let the children have some fun mixing up their perfume/potion - but of course no tasting it!</p>
       </div>
       
       <div class="polaroidCentre">
-        <a href="images/adventure3.jpg" data-lightbox="test" data-title="Bottle it">
-          <img src="images/adventure3.jpg" alt="Bottle it" style="width:100%">
+        <a href="images/potionsbottle.jpg" data-lightbox="test" data-title="Bottle it">
+          <img src="images/potionsbottle.jpg" alt="Bottle it" style="width:100%">
         </a>
         <p class="pContentText">If you have any old plastic bottles with lids (such as bubble bath bottles) you could bottle the
         perfumes and keep them for a couple of days by which time they will probably smell disgusting and you can get rid of them</p>
