--- a/KidsAtHomeModels.html
+++ b/KidsAtHomeModels.html
@@ -76,8 +76,8 @@
       </div>
     
       <div class="polaroidCentre">
-        <a href="images/image-3.jpg" data-lightbox="test" data-title="Shaker">
-          <img src="images/image-3.jpg" alt="Shaker" style="width:100%">
+        <a href="images/shakerdecorate2.jpg" data-lightbox="test" data-title="Shaker">
+          <img src="images/shakerdecorate2.jpg" alt="Shaker" style="width:100%">
         </a>
         <a class="aContentLink" href="KidsAtHomeModelsShaker.html" ontouchstart="">Shaker</a>
       </div>
