--- a/KidsAtHomePaperCrayonRubbings.html
+++ b/KidsAtHomePaperCrayonRubbings.html
@@ -70,7 +70,7 @@
       <div class="dContentTextCentre">
         <p class="pContentText">Look round for some good textures for your rubbings - maybe carpet, wooden chairs or floors,
         keyholes, coins, raised text or pictures in books, panels on doors etc.  This activity works really well outside on a
-        dry day as you can do rubbings of fences, tree trunks, patios, walls</p> 
+        dry day as you can do rubbings of fences, tree trunks, patios, walls etc.</p> 
       </div>
     </div>
     <div class="dContentPics">
@@ -85,8 +85,7 @@
         <a href="images/image-2.jpg" data-lightbox="test" data-title="Choose rubbings">
           <img src="images/image-2.jpg" alt="Choose rubbings" style="width:100%">
         </a>
-        <p class="pContentText">Rub over the surface you've chosen using the side of the
-        crayon - maybe hold the paper still for your child to help them</p>
+        <p class="pContentText">Rub over the surface you've chosen using the side of the crayon - maybe hold the paper still for your child to help them</p>
       </div>
 
       <div class="polaroidCentre">
@@ -95,6 +94,14 @@
         </a>
         <p class="pContentText">You can do lots of rubbings on one piece of paper using your different coloured crayons. If
         you like you could cut up the paper afterwards and make a picture from your rubbings</p>
+      </div>
+      
+      <div class="polaroidLeft">
+        <a href="images/image-3.jpg" data-lightbox="test" data-title="Different textures">
+          <img src="images/image-3.jpg" alt="Different textures" style="width:100%">
+        </a>
+        <p class="pContentText">Try out lots of different textures - if you're inside maybe coins, wooden floors, books with raised pictures or covers
+        and if you're outside walls, fences, tree trunks and stones work really well.</p>
       </div>
     
     </div>
