added content - pictures

--- a/KidsAtHomeExperiments.html
+++ b/KidsAtHomeExperiments.html
@@ -70,8 +70,8 @@
       </div>
   
       <div class="polaroidLeft">
-        <a href="images/image-2.jpg" data-lightbox="test" data-title="Alien Goo">
-          <img src="images/image-2.jpg" alt="Alien Goo" style="width:100%">
+        <a href="images/aliengootest.jpg" data-lightbox="test" data-title="Alien Goo">
+          <img src="images/aliengootest.jpg" alt="Alien Goo" style="width:100%">
         </a>
         <a class="aContentLink" href="KidsAtHomeExperimentsAlienGoo.html" ontouchstart="">Alien Goo</a>
       </div>
