--- a/KidsAtHomeExperimentsAlienGoo.html
+++ b/KidsAtHomeExperimentsAlienGoo.html
@@ -74,30 +74,37 @@
     </div>
     <div class="dContentPics">
       <div class="polaroidLeft">
-        <a href="images/image-1.jpg" data-lightbox="test" data-title="Make goo">
-          <img src="images/image-1.jpg" alt="Make goo" style="width:100%">
+        <a href="images/aliengoomake.jpg" data-lightbox="test" data-title="Make goo">
+          <img src="images/aliengoomake.jpg" alt="Make goo" style="width:100%">
         </a>
         <p class="pContentText">Mix 3 - 4 tablespoons of cornflour with 2 - 3 tablespoons of water in a small bowl.  You could make 1 large
         batch of mixture or make a few small batches in separate bowls so the kids can have 1 each</p>
       </div>
 
       <div class="polaroidRight">
-        <a href="images/image-2.jpg" data-lightbox="test" data-title="Mix">
-          <img src="images/image-2.jpg" alt="Mix" style="width:100%">
+        <a href="images/aliengoomix.jpg" data-lightbox="test" data-title="Mix">
+          <img src="images/aliengoomix.jpg" alt="Mix" style="width:100%">
         </a>
-        <p class="pContentText">Let the kids mix the goo and drop it from the spoon - it will drip like a liquid but also turn hard like a solid</p>
+        <p class="pContentText">Let the kids mix the goo</p>
+      </div>
+      
+      <div class="polaroidCentre">
+        <a href="images/aliengootest.jpg" data-lightbox="test" data-title="Test it">
+          <img src="images/aliengootest.jpg" alt="Test it" style="width:100%">
+        </a>
+        <p class="pContentText">Let the kids test the goo by dropping it from the spoon - it will drip like a liquid but also turn hard like a solid</p>
       </div>
 
-      <div class="polaroidCentre">
-        <a href="images/blowbubbles.jpg" data-lightbox="test" data-title="Test it">
-          <img src="images/blowbubbles.jpg" alt="Test it" style="width:100%">
+      <div class="polaroidLeft">
+        <a href="images/aliengootoy.jpg" data-lightbox="test" data-title="Play">
+          <img src="images/aliengootoy.jpg" alt="Play" style="width:100%">
         </a>
         <p class="pContentText">Try making small balls or hitting the goo with a spoon or hands or letting a small toy or piece of lego sink in it like quicksand!</p>
       </div>
     
-      <div class="polaroidLeft">
-        <a href="images/joinbubbles.jpg" data-lightbox="test" data-title="Clean up">
-          <img src="images/joinbubbles.jpg" alt="Clean up" style="width:100%">
+      <div class="polaroidCentre">
+        <a href="images/aliengoobin.jpg" data-lightbox="test" data-title="Clean up">
+          <img src="images/aliengoobin.jpg" alt="Clean up" style="width:100%">
         </a>
         <p class="pContentText">Make sure you put the cornflour and water mixture in the bin not down the sink to avoid clogging up pipes</p>
       </div>
