--- a/KidsAtHomeGames.html
+++ b/KidsAtHomeGames.html
@@ -69,8 +69,8 @@
       </div>
   
       <div class="polaroidLeft">
-        <a href="images/image-2.jpg" data-lightbox="test" data-title="Stuck in the Mud">
-          <img src="images/image-2.jpg" alt="Stuck in the Mud" style="width:100%">
+        <a href="images/stuckmudrunning.jpg" data-lightbox="test" data-title="Stuck in the Mud">
+          <img src="images/stuckmudrunning.jpg" alt="Stuck in the Mud" style="width:100%">
         </a>
         <a class="aContentLink" href="KidsAtHomeGamesStuckInTheMud.html" ontouchstart="">Stuck in the Mud</a>
       </div>
