--- a/KidsAtHomeGamesAdventure.html
+++ b/KidsAtHomeGamesAdventure.html
@@ -83,22 +83,22 @@
       </div>
 
       <div class="polaroidRight">
-        <a href="images/image-2.jpg" data-lightbox="test" data-title="Fold paper">
-          <img src="images/image-2.jpg" alt="Fold paper" style="width:100%">
+        <a href="images/adventurefoldpaper.jpg" data-lightbox="test" data-title="Fold paper">
+          <img src="images/adventurefoldpaper.jpg" alt="Fold paper" style="width:100%">
         </a>
         <p class="pContentText">Take a few sheets of paper (say 3) and fold them to make a little book</p>
       </div>
 
       <div class="polaroidCentre">
-        <a href="images/image-3.jpg" data-lightbox="test" data-title="Cut large sheets of paper">
-          <img src="images/image-3.jpg" alt="Cut large sheets of paper" style="width:100%">
+        <a href="images/adventurecutpaper.jpg" data-lightbox="test" data-title="Cut large sheets of paper">
+          <img src="images/adventurecutpaper.jpg" alt="Cut large sheets of paper" style="width:100%">
         </a>
         <p class="pContentText">Cut the paper into smaller pieces (halves or thirds) if you only have A4</p>
       </div>
     
       <div class="polaroidRight">
-        <a href="images/image-3.jpg" data-lightbox="test" data-title="Staple">
-          <img src="images/image-3.jpg" alt="Staple" style="width:100%">
+        <a href="images/adventurebook.jpg" data-lightbox="test" data-title="Staple">
+          <img src="images/adventurebook.jpg" alt="Staple" style="width:100%">
         </a>
         <p class="pContentText">The folded sheets are your "book" (you could staple the book together if you happen to have a stapler but just folded is fine)</p>
       </div>
