--- a/KidsAtHomeGamesStuckInTheMud.html
+++ b/KidsAtHomeGamesStuckInTheMud.html
@@ -69,39 +69,39 @@
     </div>
     <div class="dContentPics">
       <div class="polaroidLeft">
-        <a href="images/adventure1.jpg" data-lightbox="test" data-title="Hold a finger">
-          <img src="images/adventure1.jpg" alt="1 Hider" style="width:100%">
+        <a href="images/stuckmudhand.jpg" data-lightbox="test" data-title="Hold a finger">
+          <img src="images/stuckmudhand.jpg" alt="1 Hider" style="width:100%">
         </a>
         <p class="pContentText">One person is "it" and they need to hold out their hand with fingers splayed, all other players
         hold on to one finger</p>
       </div>
 
       <div class="polaroidRight">
-        <a href="images/image-2.jpg" data-lightbox="test" data-title="Stuck in the...">
-          <img src="images/image-2.jpg" alt="Stuck in the..." style="width:100%">
+        <a href="images/stuckmudhand.jpg" data-lightbox="test" data-title="Stuck in the...">
+          <img src="images/stuckmudhand.jpg" alt="Stuck in the..." style="width:100%">
         </a>
         <p class="pContentText">The idea is to run away when the person who is it says "Stuck in the mud" - but they can keep you
-        guessing by saying for example "Stuck in the...bath" and lots of other silly sentences</p>
+        guessing by saying for example "Stuck in the...bath" and lots of other silly sentences. You must hold on all this time</p>
       </div>
 
       <div class="polaroidCentre">
-        <a href="images/image-3.jpg" data-lightbox="test" data-title="Running">
-          <img src="images/image-3.jpg" alt="Running" style="width:100%">
+        <a href="images/stuckmudrunning.jpg" data-lightbox="test" data-title="Running">
+          <img src="images/stuckmudrunning.jpg" alt="Running" style="width:100%">
         </a>
         <p class="pContentText">Once they say "Stuck in the mud" everyone must run away trying not to be caught</p>
       </div>
     
       <div class="polaroidRight">
-        <a href="images/image-3.jpg" data-lightbox="test" data-title="Caught">
-          <img src="images/image-3.jpg" alt="Caught" style="width:100%">
+        <a href="images/stuckmudcaught.jpg" data-lightbox="test" data-title="Caught">
+          <img src="images/stuckmudcaught.jpg" alt="Caught" style="width:100%">
         </a>
         <p class="pContentText">If you are caught you stand still with arms out at right angles waiting for another player to run
         under an arm and free you.  Then you can run around again</p>
       </div>
       
       <div class="polaroidCentre">
-        <a href="images/adventure3.jpg" data-lightbox="test" data-title="The End">
-          <img src="images/adventure3.jpg" alt="The End" style="width:100%">
+        <a href="images/stuckmudend.jpg" data-lightbox="test" data-title="The End">
+          <img src="images/stuckmudend.jpg" alt="The End" style="width:100%">
         </a>
         <p class="pContentText">The game finishes when all the players are caught.  The first person caught will be the new person
         who is "it"</p>
