--- a/KidsAtHomePaper.html
+++ b/KidsAtHomePaper.html
@@ -62,8 +62,8 @@
     <!-- Set links and image for each item -->
     <div class="dContent">
       <div class="polaroidRight">
-        <a href="images/image-1.jpg" data-lightbox="test" data-title="Treasure Hunt">
-          <img src="images/image-1.jpg" alt="Treasure Hunt" style="width:100%">
+        <a href="images/treasurehunt.jpg" data-lightbox="test" data-title="Treasure Hunt">
+          <img src="images/treasurehunt.jpg" alt="Treasure Hunt" style="width:100%">
         </a>
         <a class="aContentLink" href="KidsAtHomePaperTreasureHunt.html" ontouchstart="">Treasure Hunt</a>
       </div>
@@ -83,8 +83,8 @@
       </div>
       
       <div class="polaroidLeft">
-        <a href="images/image-2.jpg" data-lightbox="test" data-title="Crayon Rubbings">
-          <img src="images/image-2.jpg" alt="Crayon Rubbings" style="width:100%">
+        <a href="images/rubbingstextures.jpg" data-lightbox="test" data-title="Crayon Rubbings">
+          <img src="images/rubbingstextures.jpg" alt="Crayon Rubbings" style="width:100%">
         </a>
         <a class="aContentLink" href="KidsAtHomePaperCrayonRubbings.html" ontouchstart="">Crayon Rubbings</a>
       </div>
