--- a/KidsAtHomePaperRacetrack.html
+++ b/KidsAtHomePaperRacetrack.html
@@ -105,8 +105,8 @@
       </div>
       
       <div class="polaroidLeft">
-        <a href="images/image-2.jpg" data-lightbox="test" data-title="Car Park">
-          <img src="images/image-2.jpg" alt="Car Park" style="width:100%">
+        <a href="images/racetrackcarpark.jpg" data-lightbox="test" data-title="Car Park">
+          <img src="images/racetrackcarpark.jpg" alt="Car Park" style="width:100%">
         </a>
         <p class="pContentText">You could always add a car park (just a sheet of paper with lines for the spaces) if you have lots of cars!</p>
       </div>
