--- a/KidsAtHomePaperTreasureHunt.html
+++ b/KidsAtHomePaperTreasureHunt.html
@@ -73,30 +73,37 @@
       </div>
     </div>
     <div class="dContentPics">
-      <div class="polaroidLeft">
-        <a href="images/image-1.jpg" data-lightbox="test" data-title="Cut paper">
-          <img src="images/image-1.jpg" alt="Cut Paper" style="width:100%">
+      <div class="polaroidCentre">
+        <a href="images/treasurecutpaper.jpg" data-lightbox="test" data-title="Cut paper">
+          <img src="images/treasurecutpaper.jpg" alt="Cut Paper" style="width:100%">
         </a>
         <p class="pContentText">Cut paper into small pieces (say 8cm x 8cm)</p>
       </div>
 
-      <div class="polaroidRight">
-        <a href="images/image-2.jpg" data-lightbox="test" data-title="Make clues">
-          <img src="images/image-2.jpg" alt="Make Clues" style="width:100%">
+      <div class="polaroidLeft">
+        <a href="images/treasuredrawclues.jpg" data-lightbox="test" data-title="Draw clues">
+          <img src="images/treasuredrawclues.jpg" alt="Draw Clues" style="width:100%">
         </a>
-        <p class="pContentText">Draw pictures for clues (or write riddles for older children)</p>
+        <p class="pContentText">Draw pictures for clues...</p>
+      </div>
+      
+      <div class="polaroidCentre">
+        <a href="images/treasurewriteclues.jpg" data-lightbox="test" data-title="Write clues">
+          <img src="images/treasurewriteclues.jpg" alt="Write Clues" style="width:100%">
+        </a>
+        <p class="pContentText">... or write riddles for older children</p>
       </div>
 
-      <div class="polaroidCentre">
-        <a href="images/image-3.jpg" data-lightbox="test" data-title="Hide clues">
-          <img src="images/image-3.jpg" alt="Hide Clues" style="width:100%">
+      <div class="polaroidRight">
+        <a href="images/treasurehideclues.jpg" data-lightbox="test" data-title="Hide clues">
+          <img src="images/treasurehideclues.jpg" alt="Hide Clues" style="width:100%">
         </a>
         <p class="pContentText">Hide clues around the house/garden</p>
       </div>
     
       <div class="polaroidLeft">
-        <a href="images/image-3.jpg" data-lightbox="test" data-title="Hide treasure">
-          <img src="images/image-3.jpg" alt="Hide treasure" style="width:100%">
+        <a href="images/treasurehunt.jpg" data-lightbox="test" data-title="Hide treasure">
+          <img src="images/treasurehunt.jpg" alt="Hide treasure" style="width:100%">
         </a>
         <p class="pContentText">Hide the treasure wherever the last clue points to</p>
       </div>
