--- a/KidsAtHomePaperCrayonRubbings.html
+++ b/KidsAtHomePaperCrayonRubbings.html
@@ -75,30 +75,30 @@
     </div>
     <div class="dContentPics">
       <div class="polaroidLeft">
-        <a href="images/image-1.jpg" data-lightbox="test" data-title="Choose colours">
-          <img src="images/image-1.jpg" alt="Choose colours" style="width:100%">
+        <a href="images/rubbingscrayons.jpg" data-lightbox="test" data-title="Choose colours">
+          <img src="images/rubbingscrayons.jpg" alt="Choose colours" style="width:100%">
         </a>
         <p class="pContentText">Get a piece of paper and choose a few colours of crayons to use</p>
       </div>
 
       <div class="polaroidRight">
-        <a href="images/image-2.jpg" data-lightbox="test" data-title="Choose rubbings">
-          <img src="images/image-2.jpg" alt="Choose rubbings" style="width:100%">
+        <a href="images/rubbingschoose.jpg" data-lightbox="test" data-title="Choose rubbings">
+          <img src="images/rubbingschoose.jpg" alt="Choose rubbings" style="width:100%">
         </a>
         <p class="pContentText">Rub over the surface you've chosen using the side of the crayon - maybe hold the paper still for your child to help them</p>
       </div>
 
       <div class="polaroidCentre">
-        <a href="images/image-3.jpg" data-lightbox="test" data-title="Different colours">
-          <img src="images/image-3.jpg" alt="Different colours" style="width:100%">
+        <a href="images/rubbingscolours.jpg" data-lightbox="test" data-title="Different colours">
+          <img src="images/rubbingscolours.jpg" alt="Different colours" style="width:100%">
         </a>
         <p class="pContentText">You can do lots of rubbings on one piece of paper using your different coloured crayons. If
         you like you could cut up the paper afterwards and make a picture from your rubbings</p>
       </div>
       
       <div class="polaroidLeft">
-        <a href="images/image-3.jpg" data-lightbox="test" data-title="Different textures">
-          <img src="images/image-3.jpg" alt="Different textures" style="width:100%">
+        <a href="images/rubbingstextures.jpg" data-lightbox="test" data-title="Different textures">
+          <img src="images/rubbingstextures.jpg" alt="Different textures" style="width:100%">
         </a>
         <p class="pContentText">Try out lots of different textures - if you're inside maybe coins, wooden floors, books with raised pictures or covers
         and if you're outside walls, fences, tree trunks and stones work really well.</p>
