--- a/KidsAtHomeExperimentsColourMixing.html
+++ b/KidsAtHomeExperimentsColourMixing.html
@@ -73,32 +73,32 @@
     </div>
     <div class="dContentPics">
       <div class="polaroidLeft">
-        <a href="images/image-1.jpg" data-lightbox="test" data-title="Make colours">
-          <img src="images/image-1.jpg" alt="Make colours" style="width:100%">
+        <a href="images/colourmix.jpg" data-lightbox="test" data-title="Make colours">
+          <img src="images/colourmix.jpg" alt="Make colours" style="width:100%">
         </a>
         <p class="pContentText">Get some plastic containers or cups and mix up food colouring and water in separate containers -
         blue, yellow and red are great if you have them</p>
       </div>
 
       <div class="polaroidRight">
-        <a href="images/image-2.jpg" data-lightbox="test" data-title="Experiment">
-          <img src="images/image-2.jpg" alt="Experiment" style="width:100%">
+        <a href="images/colourmixgreen.jpg" data-lightbox="test" data-title="Experiment">
+          <img src="images/colourmixgreen.jpg" alt="Experiment" style="width:100%">
         </a>
         <p class="pContentText">Get a clean container and let the kids experiment by adding a few spoonfuls or pouring some coloured liquid into the new
         container and adding other colours to it</p>
       </div>
 
       <div class="polaroidCentre">
-        <a href="images/blowbubbles.jpg" data-lightbox="test" data-title="Try combinations">
-          <img src="images/blowbubbles.jpg" alt="Try combinations" style="width:100%">
+        <a href="images/colourmixbrown.jpg" data-lightbox="test" data-title="Try combinations">
+          <img src="images/colourmixbrown.jpg" alt="Try combinations" style="width:100%">
         </a>
         <p class="pContentText">You may need to pour away the mixed up coloured water every now and then as it will probably end up
         brown! But the kids can then try making purple, orange and green by adding the correct 2 primary colours</p>
       </div>
       
       <div class="polaroidLeft">
-        <a href="images/blowbubbles.jpg" data-lightbox="test" data-title="Shades">
-          <img src="images/blowbubbles.jpg" alt="Shades" style="width:100%">
+        <a href="images/colourmixshades.jpg" data-lightbox="test" data-title="Shades">
+          <img src="images/colourmixshades.jpg" alt="Shades" style="width:100%">
         </a>
         <p class="pContentText">The children can also try making different shades of colours by changing the amount of each colour
         that they add</p>
