--- a/KidsAtHomeGamesSardines.html
+++ b/KidsAtHomeGamesSardines.html
@@ -69,8 +69,8 @@
     </div>
     <div class="dContentPics">
       <div class="polaroidLeft">
-        <a href="images/adventure1.jpg" data-lightbox="test" data-title="1 Hider">
-          <img src="images/adventure1.jpg" alt="1 Hider" style="width:100%">
+        <a href="images/sardinescount.jpg" data-lightbox="test" data-title="1 Hider">
+          <img src="images/sardinescount.jpg" alt="1 Hider" style="width:100%">
         </a>
         <p class="pContentText">For this game one person hides and everyone else counts</p>
       </div>
