--- a/KidsAtHomePaperTreasureHunt.html
+++ b/KidsAtHomePaperTreasureHunt.html
@@ -84,7 +84,7 @@
         <a href="images/treasuredrawclues.jpg" data-lightbox="test" data-title="Draw clues">
           <img src="images/treasuredrawclues.jpg" alt="Draw Clues" style="width:100%">
         </a>
-        <p class="pContentText">Draw pictures for clues...</p>
+        <p class="pContentText">Let the kids draw pictures for clues...</p>
       </div>
       
       <div class="polaroidCentre">
