--- a/KidsAtHomeModels.html
+++ b/KidsAtHomeModels.html
@@ -75,8 +75,8 @@
       </div>
       
       <div class="polaroidLeft">
-        <img src="images/towerrapunzel.jpg" alt="Tower" style="width:100%">
-        <a class="aContentLink" href="KidsAtHomeModelsTower.html" ontouchstart="">Tower</a>
+        <img src="images/towerscomplete.jpg" alt="Towers" style="width:100%">
+        <a class="aContentLink" href="KidsAtHomeModelsTower.html" ontouchstart="">Towers</a>
       </div>
       
       <div class="polaroidRight">
