--- a/KidsAtHomeModelsTower.html
+++ b/KidsAtHomeModelsTower.html
@@ -84,8 +84,8 @@
       </div>
 
       <div class="polaroidRight">
-        <a href="images/adventurefoldpaper.jpg" data-lightbox="test" data-title="Add decoration">
-          <img src="images/adventurefoldpaper.jpg" alt="Add decoration" style="width:100%">
+        <a href="images/towerdecorate.jpg" data-lightbox="test" data-title="Add decoration">
+          <img src="images/towerdecorate.jpg" alt="Add decoration" style="width:100%">
         </a>
         <p class="pContentText">Let the kids draw windows, doors, vines, flowers or any other decoation they like to the tower</p>
       </div>
@@ -106,16 +106,16 @@
       </div>
       
       <div class="polaroidCentre">
-        <a href="images/towercastle.jpg" data-lightbox="test" data-title="Add battlements">
-          <img src="images/towercastle.jpg" alt="Add battlements" style="width:100%">
+        <a href="images/towerbattlements.jpg" data-lightbox="test" data-title="Add battlements">
+          <img src="images/towerbattlements.jpg" alt="Add battlements" style="width:100%">
         </a>
         <p class="pContentText">If you're making a castle tower you might prefer to cut battlements in the top of the tower by cutting slits and
         bending down alternate pieces of the tube</p>
       </div>
       
       <div class="polaroidLeft">
-        <a href="images/adventure2.jpg" data-lightbox="test" data-title="Colours">
-          <img src="images/adventure2.jpg" alt="Colours" style="width:100%">
+        <a href="images/towerscomplete.jpg" data-lightbox="test" data-title="Colours">
+          <img src="images/towerscomplete.jpg" alt="Colours" style="width:100%">
         </a>
         <p class="pContentText">You can use coloured paper to make different types of towers or use white paper, or colour white paper
         - its up to the kids !</p>
