--- a/KidsAtHomeModels.html
+++ b/KidsAtHomeModels.html
@@ -60,7 +60,7 @@
     <!-- Set links and image for each item -->
     <div class="dContent">
       <div class="polaroidRight">
-        <img src="images/image-1.jpg" alt="Marble Run" style="width:100%">
+        <img src="images/marblerun.jpg" alt="Marble Run" style="width:100%">
         <a class="aContentLink" href="KidsAtHomeModelsMarbleRun.html" ontouchstart="">Marble Run</a>
       </div>
   
